Edited test.html with Atlas code editor

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 <p>and some code:</p>
 
 <pre data-code-language="python" data-executable="true" data-type="programlisting">
-print('hello world')
+print('hello world!')
 </pre>
 
 <p>&nbsp;</p>
