Test from local git.

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 
 <pre data-code-language="python" data-executable="true" data-type="programlisting">
 print('hello world!')
+print('hello world, again!')
 </pre>
 
 <p>&nbsp;</p>
